--- a/PeneiraClubeProjeto/css/style.css
+++ b/PeneiraClubeProjeto/css/style.css
@@ -20,6 +20,10 @@ nav{
     width: 200px;
 }
 
+header{
+  background-color: #333;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -61,8 +65,9 @@ ul {
   }
 
 #logoHeader{
-  width: 50px;
-  height: 45px;
+  width: 100px;
+  height: 100px;
+  /* position: absolute; */
 }
 
 #form{
