--- a/PeneiraClubeProjeto/css/style.css
+++ b/PeneiraClubeProjeto/css/style.css
@@ -1,5 +1,5 @@
 body{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Open sans extra bold, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
   height: 100% ;
@@ -21,15 +21,20 @@ nav{
 }
 
 header{
+  /* background-color: rgba(51, 51, 51, 0.993); */
   background-color: #333;
+  /* opacity : 0.5; */
 }
 
 ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    width: 500px;
+    text-shadow: 0px 0px 2px #EF5B00;
+    /* opacity : 0.5; */
   }
   
   li {
@@ -64,10 +69,21 @@ ul {
     align-items: center
   }
 
+#divLogo{
+  width: 200px;
+  /* height: 100px; */
+  margin: 0 auto;
+}
+
 #logoHeader{
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   /* position: absolute; */
+}
+
+#nameHeader{
+  width: 82px;
+  height: 80px;
 }
 
 #form{
