--- a/PeneiraClubeProjeto/css/style.css
+++ b/PeneiraClubeProjeto/css/style.css
@@ -20,15 +20,19 @@ footer{
     left: 0;
 }
 nav{
-    background-color: black;
-    color: white;
-    height: 450px;
-    width: 200px;
+    /* background-color: black; */
+    /* color: white; */
+    /* height: 450px; */
+    /* width: 200px; */
+    position: fixed;
 }
 
 header{
     background-color: #333;
     padding: 9px;
+    display: block;
+    width: 100%;
+    position: fixed;
   /* background-color: #333; */
   /* opacity : 0.5; */
 }
@@ -40,6 +44,7 @@ ul {
     overflow: hidden;
     background-color: #333;
     width: 500px;
+    /* position: fixed; */
     /* text-shadow: 0px 0px 2px whitesmoke; */
     /* opacity : 0.5; */
   }
@@ -102,6 +107,13 @@ ul {
   }
 
 
+
+
+  .circulo{
+    background-color: #EF5B00;
+    color: #EF5B00;
+    border-color: #EF5B00;
+  }
 
 
 
@@ -302,20 +314,9 @@ ul {
   opacity: 0.3;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+.img-fluid{
+  position: relative;
+  display: block;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
